--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="anindya.redditapi.Home">
+    tools:context="anindya.redditapi.listings.Home">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
