--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,25 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="Buttons">
+        <item name="android:background">@drawable/btn_border</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:layout_margin">@dimen/button_margin</item>
+
+    </style>
+
+    <style name="heading">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="nocomment">
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:color">@android:color/black</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <dimen name="button_margin">10dp</dimen>
 </resources>
