--- a/app/src/main/res/layout/item_comment_content.xml
+++ b/app/src/main/res/layout/item_comment_content.xml
@@ -10,16 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:elevation="40dp"
-        card_view:cardCornerRadius="5dp">
+        android:layout_margin="@dimen/card_margin"
+        android:elevation="@dimen/card_elevation"
+        card_view:cardCornerRadius="@dimen/card_radius">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:layout_margin="5dp">
+            android:background="@drawable/comment">
 
             <TextView
                 android:id="@+id/content"
@@ -27,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:textColor="@android:color/black"
-                android:layout_margin="10dp"/>
+                android:layout_margin="@dimen/comment_margin"/>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
