--- a/app/src/main/res/layout/item_list_content.xml
+++ b/app/src/main/res/layout/item_list_content.xml
@@ -24,14 +24,15 @@
             <ImageView
                 android:id="@+id/thumbnail"
                 android:layout_width="80dp"
-                android:layout_height="80dp"/>
+                android:layout_height="80dp"
+                android:src="@drawable/no_image"/>
 
             <TextView
                 android:id="@+id/content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:textColor="@android:color/black"
+                style="@style/heading"
                 android:layout_margin="10dp"/>
         </LinearLayout>
 
